working on feedback changes

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
 
                 <!-- CTA Button -->
                 <div class="nav-cta">
-                    <button class="cta-btn">Book Free Session</button>
+                    <button class="cta-btn">Book a demo Session</button>
                 </div>
 
                 <!-- Mobile menu button -->
@@ -93,7 +93,7 @@
                     <a href="#about" class="mobile-nav-link">About</a>
                     <a href="#contact" class="mobile-nav-link">Contact</a>
                     
-                    <button class="mobile-cta-btn">Book Free Session</button>
+                    <button class="mobile-cta-btn">Book a demo Session</button>
                 </div>
             </div>
         </div>
